<resources>
    <string name="team_name">Team Social Coding 2016.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--default translation-->
    <string name="app_name">서울의 눈-안드</string>

    <!--facebook login-->
    <string name="facebook_app_id">695279140633114</string>
    <string name="fb_login_protocol_scheme">fb695279140633114</string>
    <string name="login_skip">페이스북 로그인 건너뛰기</string>

    <!--google map fragment strings-->
    <string name="search_default_text">장소, 주소, 전화번호</string>
    <string name="search_btn_text">검색</string>

    <!--navigation drawer strings-->
    <string name="developer_string">개발자</string>
    <string name="http_string">http</string>
    <string name="map_string">CCTV 위치 확인</string>
    <string name="related_law_string">CCTV 관련법 보기</string>
    <string name="report_string">CCTV 위치 등록</string>

    <!--report strings-->
    <string name="now_getting_current_location">현재 위치를 탐색하는 중...</string>
    <string name="ask_report_current_location">현재 위치에 CCTV를 등록하시겠습니까?</string>
    <string name="agreement_header">위치 정보 사용</string>
    <string name="agreement_reason_string">
        등록할 CCTV 위치 파악을 위해 사용자의 현 위치정보를 필요로합니다.
    </string>
    <string name="agreement_ask_string">
        위치 정보 사용에 동의하시겠습니까?
    </string>
    <string name="permission_reason_explaination">
        현 위치 근처의 CCTV 위치 파악을 위해서는 현 위치정보를 필요로 합니다.\n
        [설정]>[권한]에서 해당 권한을 활성화 해주세요.
    </string>
    <string name="permission_btn_setting">설정</string>
    <string name="permission_btn_close">닫기</string>
    <string name="agreement_btn_y">동 의</string>
    <string name="agreement_btn_n">취 소</string>
    <string name="report_btn_y">등 록</string>
    <string name="report_btn_n">취 소</string>
    <string name="address_string">Address</string>
    <string name="cctv_image_string">CCTV Image</string>
    <string name="cctv_info_string">CCTV Information Image</string>
    <string name="cctv_photo_picker_string">CCTV 사진을 촬영해주세요</string>
    <string name="info_photo_picker_string">CCTV 근처 안내판을 촬영해주세요</string>
    <string name="info_null_string">CCTV 근처에 안내판이 없습니다</string>
    <string name="photo_picker_title">업로드할 이미지 선택</string>
    <string name="photo_picker_album">앨범선택</string>
    <string name="photo_picker_camera">사진촬영</string>

    <!--detail value-->
    <string name="cctv_detail_back_text">확인</string>

    <!--default value-->
    <string name="default_string">기본 문자열</string>
</resources>
