<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/map_string" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/report_string" />
        <item
            android:id="@+id/nav_related_law"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/related_law_string" />
    </group>

    <item android:title="@string/developer_string">
        <menu>
            <item
                android:id="@+id/nav_debug_http"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/http_string" />
        </menu>
    </item>

</menu>
