<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_gravity="bottom">

    <TextView
        android:id="@+id/bottom_bar_google_map_loading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFFFF"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="20sp"
        android:text="@string/now_getting_current_location" />

    <LinearLayout
        android:id="@+id/bottom_bar_google_map_asking"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#FFFFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/bottom_bar_google_map_asking_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:gravity="center"
            android:textSize="17.5sp"
            android:text="@string/ask_report_current_location" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/default_string" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="1">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/report_continue_btn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.5"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/colorEyeOfSeoul"
                android:textSize="20sp"
                android:text="@string/agreement_btn_y" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/report_abort_btn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.5"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_black_bordered"
                android:textSize="20sp"
                android:text="@string/agreement_btn_n" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>