<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="#FFFFFFFF">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/address_string" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="9.7dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:text="@string/default_string" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/default_string" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/report_complete_btn"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorEyeOfSeoul"
            android:textSize="20sp"
            android:text="@string/report_btn_y" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/report_cancle_btn"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_black_bordered"
            android:textSize="20sp"
            android:text="@string/report_btn_n" />

    </LinearLayout>

</LinearLayout>