<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/rounded_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/photo_picker_dialog_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:text="@string/photo_picker_title"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

        <ImageView
            android:id="@+id/photo_picker_dialog_cancle_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cancel"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/default_string" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:weightSum="1">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/photo_picker_dialog_camera_btn"
            android:layout_height="30dp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_background_eye_of_seoul_color"
            android:textSize="17.5sp"
            android:text="@string/photo_picker_camera" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/photo_picker_dialog_album_btn"
            android:layout_height="30dp"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_background_with_black_border"
            android:textSize="17.5sp"
            android:text="@string/photo_picker_album" />

    </LinearLayout>

</LinearLayout>